<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.zybooks.diceroller.controller.MainActivity">

    <ImageView
        android:id="@+id/dice1"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/dice_one"
        android:src="@drawable/dice_1"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/dice2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/dice_one"
        android:src="@drawable/dice_1"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/dice3"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/dice_one"
        android:src="@drawable/dice_1"
        app:tint="@color/black" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <TextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/total"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/highscore_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:text="@string/highscore"
        android:textSize="24sp" />

</LinearLayout>
</LinearLayout>